src/test/deca/syntax/parser/invalid/wrong_double_plus.deca
// Can't write ++ (should write +)

{
    x = 5;
    x ++ 2;
}

//# output
